# hope

./: .coveragerc  .env.example  .envrc.example  .flake8  .gitattributes  .gitbook  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  bump_version.sh  codecov.yml  codefresh.yml  compose.display.yml  compose.dist.yml  compose.selenium.local.yml  compose.selenium.yml  compose.yml  dev.sh  docker-compose.cy.yml  docker-compose.cypress.yml  docker-compose.flower.yml  docker-compose.frontend.dev.yml  docker-compose.frontend.dist.yml  docker-compose.frontend.yml  docker-compose.kibana.yml  docker-compose.no-airflow.yml  docker-compose.override.yml  docker-compose.yml  fabfile.py  file.xlsx  get_version.py  local_selenium_env.sh  manage.py  mkdocs.yaml  mkdocs.yml  (+8 more)
.agents/: README.md
airflow/: Dockerfile  init_local_user.py  local.Dockerfile  pyproject.toml  requirements.txt
airflow/config/: .env_airflow  airflow.cfg
airflow/dags/: check_against_sanction_list_dag.py  dashboard_report_export_dag.py  deduplicate_and_check_against_sanctions_list_dag.py  get_rapidpro_verification_dag.py  merge_import_dag.py  pull_from_ca_dh_dag.py  pull_from_erp_dh_dag.py  rdi_deduplication_dag.py  registration_kobo_import_dag.py  registration_kobo_import_hourly_dag.py  registration_xlsx_import_dag.py  registration_xlsx_import_hourly_dag.py  report_export_dag.py  send_target_population_dag.py  sync_sanction_list_dag.py  test_dag.py  upload_new_kobo_template_and_update_flex_fields_dag.py
airflow/dags/operators/: base.py  cash_plan_pull_operator.py  check_against_sanction_list_operator.py  dashboard_report_export_operator.py  deduplicate_and_check_against_sanctions_list_operator.py  get_rapidpro_verification_operator.py  merge_registration_import_data.py  program_ca_push_operator.py  pull_from_ca_dh_operator.py  pull_from_erp_dh_operator.py  rdi_deduplication_operator.py  registration_data_pull_operator.py  registration_kobo_import_operator.py  registration_kobo_import_operator_hourly.py  registration_xlsx_import_operator.py  registration_xlsx_import_operator_hourly.py  report_export_operator.py  send_target_population.py  sync_sanction_list_operator.py  target_population_ca_push_operator.py  test_connection.py  upload_new_kobo_template_and_update_flex_fields_operator.py
backend/: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pdm-python  .pylintrc  Dockerfile  README.md  compare_coverage.py  create_schemas.sh  dev.sh  docker-entrypoint.sh  docker-lint-entrypoint.sh  docker-mypy-entrypoint.sh  docker-test-entrypoint.sh  edopomoga_sample.csv  entrypoint.sh  get_data.py  gunicorn_config.py  local.Dockerfile  manage.py  newrelic.ini  output.json  pdm.toml.template  pyproject.toml  pytest.ini  pytest_html_report.html  specific.json  tox.ini  untilfail.sh  worker-entrypoint.sh
backend/archive/: output_1715070819.0902414.json  output_1715071237.6102688.json  output_1715077786.7695792.json  output_1715078334.683505.json  output_1715078584.4802363.json  output_1715078647.6722705.json  output_1715078796.0063202.json  output_1715079032.8131428.json
backend/data/: FlexibleAttributesInit.xlsx  GetBusinessAreaList_XML.xml  NewFlexAttrs.xls  choices.csv  country_code_mapping.txt  generate_import_file.py  household_header_mapping.json  individual_header_mapping.json  people_header_mapping.json
backend/docker/: Dockerfile  entrypoint.sh
backend/hct_mis_api/: __init__.py  conftest.py  rdi_import_1_hh_1_ind.xlsx  runner.py  schema.py  settings.py  settings_test.py  urls.py  wsgi.py
backend/hct_mis_api/api/: admin.py  auth.py  caches.py  models.py  tests.py  urls.py  utils.py
backend/hct_mis_api/aurora/: admin.py  api.py  apps.py  celery_tasks.py  fixtures.py  forms.py  models.py  rdi.py  urls.py  utils.py  views.py
backend/hct_mis_api/config/: celery.py  defaults.py  env.py  settings.py  urls.py
backend/hct_mis_api/middlewares/: deployment.py  sentry.py  silk.py  version.py
backend/hct_mis_api/one_time_scripts/: add_missing_admin_area_for_ukr_households.py  add_tickets_to_missing_rdis.py  assign_edopomoga_collector.py  assign_edopomoga_collector.pyi  assign_foster_child.py  assign_individual_to_rdi.py  assign_program_cycle_to_target_population.py  assign_program_to_grievance_tickets.py  assign_rdi_to_individual.py  calculate_age_at_registration.py  clean_deduplication_status.py  create_documents_from_csv.py  create_edopomoga_tps.py  create_hh_and_ind_collections.py  delete_pplans_and_rdi.py  delete_pplans_and_rdi_for_nigeria.py  delivery_date_fix.py  fake_pull_from_ca_datahub.py  fix_cross_programs_tickets.py  fix_disability_fields.py  fix_documents_duplicates.py  fix_documents_for_withrawn_individuals.py  fix_grievance_individual_data_update.py  fix_individual_disability.py  fix_kobo_imported_hh_detail_id.py  gpf_activity_log_assign_program.py  gpf_migrate_es_data.py  gpf_migrate_psql_data.py  handle_individuals_with_multiple_roles.py  import_documents_kenya.py  mass_grievance_ticket_closure.py  mass_withdraw_sudan_hhs.py  migrate_data_for_sync.py  migrate_data_grievance_linked_tickets.py  migrate_data_to_representations.py  migrate_everything_to_representations.py  migrate_files_to_representations.py  migrate_grievance_for_sync.py  migrate_grievance_to_representations.py  migrate_household_admin_area.py  (+19 more)
backend/hct_mis_api/payment/: serializers.py  urls.py  views.py
backend/hct_mis_api/settings/: __init__.py  azure_storage.py  base.py  config.py  defaults.py  dev.py  env.py  prod.py  settings.py  settings_test.py  staging.py  test.py
backend/new_test/: conftest.py  test_serverek.py
backend/new_test/helpers/: date_time_format.py  helper.py
backend/power_query/: __init__.py  admin.py  apps.py  celery_tasks.py  defaults.py  exceptions.py  forms.py  json.py  mixin.py  models.py  signals.py  urls.py  utils.py  validators.py  views.py  widget.py
backend/requirements/: base.pip  dev.pip
backend/selenium_tests/: README.md  conftest.py
backend/selenono/: conftest.py  test_bonie.py
backend/tests/: conftest.py
(+12240 files in other folders)
