[tool.black]
line-length = 80
include = '\.pyi?$'

[tool.poetry]
name = "HCT MIS airflow"
version = "0.1.0"
description = ""
authors = ["Tivix"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "2.2.8"
django_compressor = "2.3"
django-storages = { version = "1.8", extras = ["azure"] }
django-countries = "5.5"
sorl-thumbnail = "12.5.0"
django-model-utils = "4.0.0"
django-phonenumber-field = "4.0.0"
phonenumbers = "8.11.1"
social-auth-app-django = "3.1.0"
graphene-file-upload = "1.2.2"
django-mptt = "0.11.0"
django-extensions = "2.2.6"
pygraphviz = "1.5"
django-auditlog = { git = "https://github.com/Tivix/django-auditlog.git", branch = "master" }
django-elasticsearch-dsl = "7.1.4"
scipy = "1.5.1"
django-constance = { version = "2.7.0", extras = ["redis"] }
admin-extra-urls = "2.2.0"
django-multiselectfield = "0.1.12"
Pillow = "7.0.0"
psycopg2-binary = "2.8.4"
pycountry = "19.8.18"
openpyxl = "3.0.3"
xlrd = "1.2.0"
ipdb = "0.13.4"
openpyxl-image-loader = "1.0.5"
GDAL = "2.4.0"
sentry-sdk = "0.19.5"
graphene-django = "2.7.1"
django-filter = "2.2.0"
django-cors-headers = "3.2.0"
werkzeug="0.16.1"
flask-bcrypt = "0.7.1"
text-unidecode = "1.3"
django-concurrency = "^2.2"

[tool.poetry.dev-dependencies]
factory-boy = "2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
