[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | snapshots
)/
'''
[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
known_first_party = [
    "account",
    "core",
    "grievance",
    "household",
    "id_management",
    "intervention",
    "payment",
    "program",
    "targeting.apps.TargetingConfig",
    "utils",
    "registration_datahub",
    "mptt",
    "django_extensions",
    "registration_data",
    "cash_assist_datahub",
    "mis_datahub",
    "erp_datahub",
    "sanction_list",
]
known_django = "django"
sections = ["FUTURE","STDLIB","DJANGO","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
include_trailing_comma = true
skip = "migrations"

[tool.poetry]
name = "HCT MIS Backend"
version = "2022.3.1"
description = "HCT MIS is UNICEF's humanitarian cash transfer platform."
authors = ["Tivix"]

[tool.poetry.dependencies]
python = "3.9.1"
Django = "3.2.12"
Jinja2 = "2.11.2"
PyJWT = "^2.0.0"
PyYAML = "^5.4.1"
black = "^20.8b1"
celery = {extras = ["redis"], version = "^5.0.5"}
defusedxml= "0.7.0rc1"
django-advanced-filters = "*"
django-admin-extra-urls = "^3.5.1"
django-adminactions = "^1.13"
django-adminfilters = "1.9.0"
django-auditlog = { url = "https://github.com/Tivix/django-auditlog/archive/refs/heads/master.zip" }
django-celery-beat = "^2.2.0"
django-celery-results = "^2.0.1"
django-concurrency = "^2.2"
django-constance = { version = "2.8.0", extras = ["redis"] }
django-cors-headers = "3.2.0"
django-countries = "^7.0"
django-elasticsearch-dsl = "7.1.4"
django-environ = "*"
django-extensions = "2.2.6"
django-filter = { git = "https://github.com/srugano/django-filter.git", rev="b01c91990550ccf543cf23110f6750016ca38ec6" }
django-hijack = "*"
django-jsoneditor = "*"
django-model-utils = "4.0.0"
django-mptt = "0.11.0"
django-multiselectfield = "0.1.12"
django-phonenumber-field = "4.0.0"
django-redis = "^5.0.0"
django-smart-admin = "1.6"
django-sql-explorer = {extras = ["xls"], version = "^2.2"}
django-storages = { version = "1.8", extras = ["azure"] }
django-sysinfo = ">=2.6.0"
django_compressor = ">=2.4"
elasticsearch ="<7.14"
elasticsearch-dsl ="^7.0.0"
gevent = "20.9.0"
graphene-django = "2.14.0"
graphene-file-upload = "1.2.2"
greenlet = "0.4.17"
gunicorn = "20.0.4"
jedi = "0.17.2"
openpyxl = "3.0.3"
openpyxl_image_loader = "1.0.5"
phonenumbers = "8.11.1"
pillow ="7.0.0"
prompt-toolkit = "3.0.8"
psycopg2 = "2.8.4"
ptyprocess = "0.6.0"
pycountry = "20.7.3"
pygments = "2.7.3"
pytz = "2020.4"
sentry-sdk = "0.19.5"
single-source = "^0.1.5"
social-auth-app-django = "^5.0.0"
social-auth-core = "^4.2.0"
sorl-thumbnail = "12.5.0"
urllib3 = "1.26.2"
xlrd = "1.2.0"
argh = "^0.26.2"
django-import-export = "^2.7.0"
MarkupSafe = "2.0.1"
django-import-export-celery = "^1.1.6"
tblib = "^1.7.0"

[tool.poetry.dev-dependencies]
django-webtest = "^1.9.7"
factory-boy = "2.12.0"
faker = "5.0.2"
freezegun = "0.3.14"
ipdb = "0.13.4"
parameterized = "0.7.4"
requests-mock = "^1.9.2"
responses = "^0.13.3"
snapshottest = "1.0.0a0"
unittest-xml-reporting = "3.0.4"
watchdog = "^2.0.2"
wasmer = "0.4.1"
parso = "0.7.1"
argh = "^0.26.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
