[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | snapshots
)/
'''
[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
known_first_party = [
    "account",
    "core",
    "grievance",
    "household",
    "id_management",
    "intervention",
    "payment",
    "program",
    "targeting.apps.TargetingConfig",
    "utils",
    "registration_datahub",
    "mptt",
    "django_extensions",
    "registration_data",
    "cash_assist_datahub",
    "mis_datahub",
    "erp_datahub",
    "sanction_list",
]
known_django = "django"
sections = ["FUTURE","STDLIB","DJANGO","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
include_trailing_comma = true
skip = "migrations"

[tool.poetry]
name = "HCT MIS Backend"
version = "2022.8.2"
description = "HCT MIS is UNICEF's humanitarian cash transfer platform."
authors = ["Tivix"]

[tool.poetry.dependencies]
python = "3.9.12"
Django = "3.2.15"
Jinja2 = "3.1.2"
PyJWT = "^2.4.0"
PyYAML = "^6.0"
black = "^22.3.0"
celery = {extras = ["redis"], version = "^5.2.7"}
defusedxml = "0.7.0rc1"
django-advanced-filters = "2.0.0"
django-admin-extra-buttons = "^1.4.2"
django-adminactions = "^1.15"
django-adminfilters = "2.0.2"
django-auditlog = { url = "https://github.com/Tivix/django-auditlog/archive/refs/heads/master.zip" }
django-celery-beat = "^2.3.0"
django-celery-results = "^2.3.1"
django-concurrency = "^2.4"
django-constance = { version = "2.9.0", extras = ["redis"] }
django-cors-headers = "3.13.0"
django-countries = "^7.3.2"
django-elasticsearch-dsl = "7.2.2"
django-environ = "0.9.0"
django-extensions = "3.1.5"
django-filter = "21.1"
django-hijack = "3.2.1"
django-jsoneditor = "0.2.2"
django-model-utils = "4.2.0"
django-mptt = "0.13.4"
django-multiselectfield = "0.1.12"
django-phonenumber-field = "6.1.0"
django-redis = "^5.2.0"
django-smart-admin = "1.9"
django-sql-explorer = {extras = ["xls"], version = "^2.4"}
django-storages = { version = "1.12.3", extras = ["azure"] }
django-sysinfo = ">=2.6.0"
django_compressor = ">=4.0"
elasticsearch ="<7.14"
elasticsearch-dsl ="^7.0.0"
gevent = "21.12.0"
graphene-django = "2.14.0"
graphene-file-upload = "1.3.0"
greenlet = "1.1.2"
gunicorn = "20.1.0"
jedi = "0.18.1"
openpyxl = "3.0.10"
openpyxl_image_loader = "1.0.5"
phonenumbers = "8.12.49"
pillow = "9.2.0"
prompt-toolkit = "3.0.29"
psycopg2 = "2.9.3"
ptyprocess = "0.7.0"
pycountry = "22.3.5"
pygments = "2.12.0"
pytz = "2022.1"
sentry-sdk = "1.5.12"
single-source = "^0.3.0"
social-auth-app-django = "^5.0.0"
social-auth-core = "^4.2.0"
sorl-thumbnail = "12.8.0"
urllib3 = "1.26.9"
xlrd = "1.2.0"
django-import-export = "^2.8.0"
MarkupSafe = "2.1.1"
django-import-export-celery = "^1.2"
tblib = "^1.7.0"
ipython = "8.4.0"
pytesseract = "^0.3.9"
newrelic = "^7.10.0"
djangorestframework = "^3.13.1"
django-silk = "5.0.1"

[tool.poetry.dev-dependencies]
django-webtest = "^1.9.10"
factory-boy = "2.12.0"
faker = "13.12.1"
freezegun = "0.3.14"
ipdb = "0.13.9"
parameterized = "0.8.1"
requests-mock = "^1.9.3"
responses = "^0.21.0"
snapshottest = "1.0.0a0"
unittest-xml-reporting = "3.2.0"
watchdog = "^2.1.8"
wasmer = "1.1.0"
parso = "0.8.3"
argh = "^0.26.2"
flake8 = "4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"